--- a/11.secret.yaml
+++ b/11.secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: pod-secrets
 type: Opaque
 data:
-  username: "cfhjhj"
-  password: "djfhjghj"
+  username: "YWRtaW4K"
+  password: "YWRtaW4xMjMK"
