--- a/11.secret.yaml
+++ b/11.secret.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
-kind: secrets
+kind: Secret
 metadata:
-  name: pod-secrets
+  name: pod-secret
 type: Opaque
+# data should be encoded.
 data:
   username: "YWRtaW4K"
   password: "YWRtaW4xMjMK"
